--- a/form.html
+++ b/form.html
@@ -11,12 +11,12 @@
 
     <form action="https://development-us-west-1-tdevcurrent.tessituranetworkdev.com/c/RanorexStandalone2Slug" method="post">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
+        <input type="text" id="tn-cust-field-username" name="tn-cust-field-username">
 
         <br>
 
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="text" id="tn-cust-field-password" name="tn-cust-field-password">
 
         <br>
 
